fixed mobile navbar z-index

--- a/sustained/src/components/navbar/navbar.css
+++ b/sustained/src/components/navbar/navbar.css
@@ -19,6 +19,7 @@
     top: 67px;
     width: 100%;
     padding: 0;
+    z-index: 1;
 }
 
 .link {
